@@ -47,6 +47,7 @@ modules_LTLIBRARIES = m_accept.la    \
                       m_services.la  \
                       m_stats.la     \
                       m_svinfo.la    \
+                      m_svshost.la   \
                       m_svsmode.la   \
                       m_svsnick.la   \
                       m_tburst.la    \
@@ -110,6 +111,7 @@ m_set_la_LDFLAGS = $(MODULE_FLAGS)
 m_services_la_LDFLAGS = $(MODULE_FLAGS)
 m_stats_la_LDFLAGS = $(MODULE_FLAGS)
 m_svinfo_la_LDFLAGS = $(MODULE_FLAGS)
+m_svshost_la_LDFLAGS = $(MODULE_FLAGS)
 m_svsmode_la_LDFLAGS = $(MODULE_FLAGS)
 m_svsnick_la_LDFLAGS = $(MODULE_FLAGS)
 m_tburst_la_LDFLAGS = $(MODULE_FLAGS)
@@ -172,6 +174,7 @@ m_set_la_SOURCES = m_set.c
 m_services_la_SOURCES = m_services.c
 m_stats_la_SOURCES = m_stats.c
 m_svinfo_la_SOURCES = m_svinfo.c
+m_svshost_la_SOURCES = m_svshost.c
 m_svsmode_la_SOURCES = m_svsmode.c
 m_svsnick_la_SOURCES = m_svsnick.c
 m_tburst_la_SOURCES = m_tburst.c
